--- a/templates/pages/detail.html
+++ b/templates/pages/detail.html
@@ -26,23 +26,15 @@
                         <a href="">
                             <span class="badge bg-danger me-1">
                                 <strong>Badge(s) :</strong>
-                                {% for userBadge in userBadges %}
-                                {% if userBadge.badge.name == "Star" %}
-                                <strong> -
-                                    {{ userBadge.badge }}
-                                </strong>
-                                {% endif %}
-                                {% if userBadge.badge.name == "Collector" %}
-                                <strong> -
-                                    {{ userBadge.badge }}
-                                </strong>
-                                {% endif %}
-                                {% if userBadge.badge.name == "Pionneer" %}
+                                {% if model3dObject.user.badgeList == None %}
                                 <strong>
-                                    {{ userBadge.badge }}
+                                Aucun badge
+                                </strong>
+                                {% else %}
+                                <strong>
+                                {{ model3dObject.user.badgeList|join:", " }}
                                 </strong>
                                 {% endif %}
-                                {% endfor %}
                             </span>
                         </a>
                     </div>
