--- a/templates/pages/page-editor.html
+++ b/templates/pages/page-editor.html
@@ -7,10 +7,10 @@
 
             <div class="row mb-3">
                 <div class="col-sm-6" style="margin: auto;">
-                    <h5 style="text-align: center; color: #192a56;" class="py-5">Poster votre image 3D</h1>
+                    <h5 style="text-align: center; color: #192a56;" class="py-5">Poster votre image</h1>
                     <div class="form-floating mb-3">
                         {{ form.image }}
-                        <label for="floatingInput">IMAGE 3D</label>
+                        <label for="floatingInput">IMAGE</label>
                     </div>
                     <div class="form-floating mb-3">
                         {{ form.title }}
