--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -24,7 +24,7 @@
     <div class="p-2 text-center bg-light">
       <h1 class="mb-3"><a href="{% url 'home-view' %}">Coding challenge</a></h1>
       {% if request.user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'account-user-editor' %}" role="button">Poster votre image (3D)</a>
+        <a class="btn btn-primary" href="{% url 'account-user-editor' %}" role="button">Poster votre image</a>
         <a class="btn btn-primary" href="{% url 'account_logout' %}" role="button">Déconnexion</a>
         {% else %}
         <a class="btn btn-primary" href="{% url 'account_login' %}" role="button">Connexion</a>
